added cluster upgrade and bounce

--- a/roles/elasticsearch/templates/bs_elasticsearch.tmpl
+++ b/roles/elasticsearch/templates/bs_elasticsearch.tmpl
@@ -3,7 +3,8 @@
 		"elasticsearch": {
 			"software/elasticsearch/conf/port": {
 				"value": "{{ elasticsearch_port }}",
-				"encrypt": false
+				"encrypt": false,
+				"state": "present"
 			}
 		}
 	}
