--- a/roles/logstash/templates/bs_logstash.tmpl
+++ b/roles/logstash/templates/bs_logstash.tmpl
@@ -3,15 +3,18 @@
 		"logstash": {
 			"software/logstash/conf/port": {
 				"value": "{{ logstash_port }}",
-				"encrypt": false
+				"encrypt": false,
+				"state": "present"
 			},
 			"software/logstash/conf/public_cert": {
 				"value": "/etc/ssl/certs/logstash-forwarder-{{ ansible_environment }}.crt",
-				"encrypt": false
+				"encrypt": false,
+				"state": "present"
 			},
 			"software/logstash/conf/private_key": {
 				"value": "{{ inf_app_path}}/logstash/current/logstash-forwarder.key",
-				"encrypt": false
+				"encrypt": false,
+				"state": "present"
 			}
 		}
 	}
