initial work on mongo replica set

--- a/roles/mongod/templates/bs_mongod.tmpl
+++ b/roles/mongod/templates/bs_mongod.tmpl
@@ -32,7 +32,7 @@
 				"state": "present"
 			},
 			"software/mongod/conf/replication/replSetName": {
-				"value": "{{ mongod_repl_set }}",
+				"value": "repl0{{ ansible_environment }}",
 				"encrypt": false,
 				"state": "present"
 			},
