refined mongo cluster install and add mongo ops manager

--- a/roles/mongod/templates/bs_mongod.tmpl
+++ b/roles/mongod/templates/bs_mongod.tmpl
@@ -21,6 +21,16 @@
 				"encrypt": false,
 				"state": "present"
 			},
+			"software/mongod/conf/storage/directoryPerDB": {
+				"value": "true",
+				"encrypt": false,
+				"state": "present"
+			},
+			"software/mongod/conf/storage/engine": {
+				"value": "{{ mongod_engine }}",
+				"encrypt": false,
+				"state": "present"
+			},
 			"software/mongod/conf/storage/dbPath": {
 				"value": "{{ db_data_path }}/mongo/mongod",
 				"encrypt": false,
